environments/water-nonprod/transport_test_instance/sg.tf
resource "aws_security_group" "trtst_sg" {
  name        = "trtst_sg"
  description = "Allow traffic to the trtst instance"
  vpc_id      = data.terraform_remote_state.layer0.outputs.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "ICMP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # trtst in
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = data.terraform_remote_state.layer0.outputs.tags
}
